<resources>
    <string name="app_name">ChatBuddy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_logout_title">Logout</string>
    <string name="confirm_logout">Are you sure that you want to logout?</string>
    <string name="confirm_logout_ok">Yes</string>
    <string name="confirm_logout_cancel">Cancel</string>
    <string name="email">email</string>
    <string name="search_enter_nickname">Please enter email</string>
    <string name="hickname">hickname</string>
    <string name="search_nickname_short">Please enter at least 3 characters</string>
    <string name="seen">Seen</string>
    <string name="chat">Chat</string>
    <string name="logo">logo</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="don_t_have_an_account_create_one">Don\'t have an account? Create one!</string>
    <string name="nickname">Nickname</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="send">Send</string>
    <string name="add_user">Add user</string>
    <string name="info">Info</string>
    <string name="no_internet_text">Internet not available, Cross check your internet connectivity and try again</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="use_dark_theme">Use dark theme</string>
    <string name="save">Save</string>
    <string name="select_photo">Select photo</string>
    <string name="avatar">avatar</string>
    <string name="settings_saved">Settings saved!</string>
    <string name="permissions_granted">Camera permissions granted</string>
    <string name="permissions_denied">Camera permissions denied</string>
</resources>
